--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,7 @@ ftbquests_version_range=[2001,)
 mod_id=teamstages
 mod_name=Team Stages
 mod_license=All Rights Reserved
-mod_version=1.0.0
+mod_version=1.2.0
 mod_group_id=net.scsupercraft.teamstages
 mod_authors=SCsupercraft
-mod_description=Team Stages is an addon for Game Stages, allowing stages to be given to both players and teams. \n\nTeam Stages adds a new command, /teamstage, which can be used to give stages to and remove stages from the specified player or team. The Game Stages API and the /gamestage command by default only effect the player but this can be changed in the config to effect a team or both the player and the team.
+mod_description=Team Stages is an addon for Game Stages, allowing stages to be given to both players and teams. \n\nTeam Stages adds a new command, /teamstage, which can be used to give stages to and remove stages from the specified player or team. The Game Stages API and the /gamestage command by default only effect the player's team but this can be changed in the config to effect just the player or both the player and the team.
