--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ mapping_version=2023.09.03-1.20.1
 
 architectury_api_version=9.2.14
 architectury_api_version_range=[9.2.14,)
-gamestages_file_id=5790361
+gamestages_version=15.0.2
 gamestages_version_range=[15,)
 ftbteams_version_range=[2001,)
 ftbquests_version_range=[2001,)
