--- a/build.gradle
+++ b/build.gradle
@@ -164,6 +164,7 @@ publishing {
         register('mavenJava', MavenPublication) {
             artifactId = base.archivesName.get()
             from components.java
+            fg.component(it)
         }
     }
     repositories {
