--- a/build.gradle
+++ b/build.gradle
@@ -174,6 +174,10 @@ publishing {
     }
 }
 
+tasks.withType(GenerateModuleMetadata).configureEach {
+    enabled = false
+}
+
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
 }
